--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -196,7 +196,7 @@ Set timeout value for symlink cache timeout in seconds. Default value is 3600.
 
 *-o bandwidthoveruse=*'N'::
 Define ratio of allowed bandwidth overuse when fetching data. Default value is
-1.0. This option is effective only with N+M goals (xors and erasure codes).
+1.0. This option is effective only with N+M goals (erasure codes).
 
 *-o nostdmountoptions*::
 Equivalent to *--nostdopts* (*-n*) option for use in fstab.
@@ -264,17 +264,9 @@ like 'chmod ug-s', and therefore can't be controlled by SFS as 'chown'
 
 == FSTAB
 
-Since version 3.13 you can define your `/etc/fstab` SaunaFS share with new
-scheme:
+You can define your `/etc/fstab` SaunaFS share like this:
 
     saunafs-master:/ /mnt/saunafs safs default 0 0
-
-instead of old fashioned (still supported for backward compatibility):
-
-    sfsmount /mnt/saunafs fuse sfssubfolder=/,sfsmaster=saunafs-master 0 0
-
-This new scheme was implemented to be compliant with scheme introduced by
-FUSE's author (read more: https://lwn.net/Articles/221779/).
 
 == REPORTING BUGS
 
